@@ -63,6 +63,8 @@
 								ui:id="filter_dot_${i}"
 								x="${f}" y.id="g_${i}"
 								pointer="hand"
+								size="1 + 2*:_ui_filter_point_thickness"
+								hover.size="1 + 2*:_ui_filter_point_thickness"
 								bsize="4"
 								color="graph_mesh"
 								hover.color="graph_mesh"
@@ -81,6 +83,8 @@
 								x="${f}" y.id="g_${i}"
 								pointer="hand"
 								color="graph_mesh"
+								size="1 + 2*:_ui_filter_point_thickness"
+								hover.size="1 + 2*:_ui_filter_point_thickness"
 								bsize="4"
 								hover.color="graph_mesh"
 								bcolor="graph_mesh"
